# Hash-server

./: Dockerfile  README.md  pyproject.toml
app/: application.py  main.py  test_application.py
